@@ -12,6 +12,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fixed piece picker bug when using pad-files
 	* fix read-piece response for cancelled deadline-pieces
 	* fixed file priority vector-overrun
 	* fix potential packet allocation alignment issue in utp
